This file documents the revision history for the Monitoring Webinterface Thruk.

next:
          - added sanity check when saving recurring downtimes
          - Bug Fixes
            - missing filter in list of recurring downtime
            - fixed state_hosts for http backend

1.72     Tue Jun  4 18:42:50 CEST 2013
          - enable connection pool by default (only with 3 backends or more)
          - connection pool uses 90% less memory now
          - allow setting 'state_host' explicitly
          - speed improvments (use json::xs for faster serialization)
          - close (most) popups by clicking outside popup
          - Bug Fixes
            - disable curl when using threads
            - fixed playing sounds on problems
            - conf: plugin list/preview over http

1.70-4   Tue May 21 11:40:34 CEST 2013
          - Bug Fixes
            - fixed occasional sigpipes on config reload
            - fixed memory leak in livestatus accessor
            - fixed connection leak in logcache
            - don't strip nasty chars from passwords

1.70-3   Tue May 14 17:07:57 CEST 2013
          - reload page after connection errors (only in frames mode)
          - Bug Fixes
            - increased range of utf-8 characters removed due to
              missing high surrogate character in surrogate pair

1.70-2   Wed May  8 22:13:47 CEST 2013
          - Bug Fixes
            - fixed sending commands to multiple backends

1.70     Mon May  6 20:47:31 CEST 2013
          - added public bookmarks
          - added recurring downtimes for host- and servicegroups
          - added regular expression contact filter (Scott Dworkis)
          - config tool:
            - resolve hostgroup_members when looking for a hosts services
          - Bug Fixes
            - fixed negated regex group search
            - fixed encoding in reports / bookmarks

1.68     Tue Apr  9 21:04:03 CEST 2013
          - allow custom cron entries for reports / recurring downtimes