@@ -2,6 +2,7 @@ This file documents the revision history for the Monitoring Webinterface Thruk.
 
 next:
           - added sanity check when saving recurring downtimes
+          - log host/service name when deleting downtimes/comments
           - Bug Fixes
             - missing filter in list of recurring downtime
             - fixed state_hosts for http backend
